updated a/b test lesson plan

--- a/two-sample-t-tests.ipynb
+++ b/two-sample-t-tests.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "id": "b333503e",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "id": "69bc5a65",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "4        4        1       0.000000"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "id": "7d828db9",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "id": "9290c82a",
    "metadata": {},
    "outputs": [
@@ -295,6 +295,7 @@
     "control_data = data[data['treated'] == 0]['avg_load_time']\n",
     "n_t = treated_data.shape[0]\n",
     "n_c = control_data.shape[0]\n",
+    "N = data.shape[0] \n",
     "\n",
     "delta =  treated_data.mean() - control_data.mean()\n",
     "\n",
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "id": "3c328ae3",
    "metadata": {},
    "outputs": [
@@ -343,7 +344,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P-value: 1.299840984641562e-09\n"
+      "P-value: 1.3464993265570102e-09\n"
      ]
     }
    ],
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "id": "9a2e1089",
    "metadata": {},
    "outputs": [
@@ -406,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "id": "a2923a31",
    "metadata": {},
    "outputs": [
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "id": "5c23af89",
    "metadata": {},
    "outputs": [
@@ -536,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "id": "8e9fb1f8",
    "metadata": {},
    "outputs": [
@@ -547,7 +548,7 @@
        "<Figure size 1000x600 with 1 Axes>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "id": "08af0654",
    "metadata": {},
    "outputs": [
@@ -611,7 +612,53 @@
    "id": "2caf9d7b",
    "metadata": {},
    "source": [
-    "**Takehome message:** Even if the distribution of your two samples is non-normal, you can stil run a t-test as long as the sample difference in means is approximately normal. This is usually fulfilled by the CLT as long as your sample size is large enough. "
+    "**Takehome message:** Even if the distribution of your two samples is non-normal, you can stil run a t-test as long as the sample difference in means is approximately normal. This is usually fulfilled by the CLT as long as your sample size is large enough. \n",
+    "\n",
+    "But how large is large enough? You might have learned that $n \\ge 30$ is usually enough for the CLT to apply, but finding the correct sample size depends on the skewness of the data. A rule of thumb when the skewness coefficient $s$ is greater than 1 in magnitude $(|s| > 1)$ is the minimum number of sample for each variant for $\\bar{Y}$ to be normally distributed is $355s^2$ (Kohavi, Deng et al 2014). \n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "s &= \\frac{[E(Y - E(Y)]^3}{[Var(Y)]^\\frac{3}{2}}\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "Let's try to estimate the sample size we need to have the CLT apply with the data we have. Since we don't know the skewness parameter $s$ of the population, we estimate it by computing $\\hat{s}$. Luckily, `scipy` has a command that calculates the skew for us.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "49bc64c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimated skew coefficient: 2.02\n",
+      "Minimum samples needed per group: 1455.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Estimate s\n",
+    "Y = data['avg_load_time']\n",
+    "\n",
+    "s_hat = stats.skew(Y)\n",
+    "\n",
+    "print(f\"Estimated skew coefficient: {s_hat:.2f}\")\n",
+    "\n",
+    "# Minimum sample size per variant: 355 * s^2 (Kohavi et al. 2014)\n",
+    "min_samples = 355 * np.power(s_hat, 2)\n",
+    "print(f\"Minimum samples needed per group: {np.ceil(min_samples)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "146fe191",
+   "metadata": {},
+   "source": [
+    "So we need at least 1455 people in each group for the normality assumption to hold. In practice, we would only use this number check if we suspect that our metric is skewed."
    ]
   },
   {
