wrote sample size function

--- a/power_analysis.ipynb
+++ b/power_analysis.ipynb
@@ -56,8 +56,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0d933ee8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import norm\n",
+    "import numpy as np\n",
+    "\n",
+    "def calculate_sample_size(alpha : float, power : float, delta : float, variance : float) -> float:\n",
+    "    \"\"\" Calculates the sample size needed to perform an A/B test comparing means\n",
+    "    Parameters:\n",
+    "    ----------\n",
+    "    alpha : float\n",
+    "        The significiance threshold of the experiment. Between 0 and 1\n",
+    "    power : float\n",
+    "        The desired power of the experiment. Between 0 and 1\n",
+    "    delta : float\n",
+    "        The desired effect size that you want to detect in the experiment.\n",
+    "    variance : float\n",
+    "        The variance of the group you will be running the experiment on. The pooled variance will be calculated by doing 2*variance. Must be greater than or equal to 0\n",
+    "\n",
+    "    Returns:\n",
+    "    n : int\n",
+    "        The required sample size for each group\n",
+    "    \"\"\"\n",
+    "    if alpha < 0 or alpha > 1:\n",
+    "        raise Exception(\"Alpha must be between 0 and 1\")\n",
+    "\n",
+    "    if power < 0 or power > 1:\n",
+    "        raise Exception(\"Power must be between 0 and 1\")\n",
+    "\n",
+    "    if variance < 0:\n",
+    "        raise Exception(\"Variance must be greater than or equal to 0\")\n",
+    "\n",
+    "    Z_ALPHA = norm.ppf(1 - alpha / 2)\n",
+    "    Z_POWER = norm.ppf(power)\n",
+    "    POOLED_VARIANCE = 2 * variance \n",
+    "    \n",
+    "    n = ((Z_ALPHA + Z_POWER)**2 * POOLED_VARIANCE) /  (delta**2)\n",
+    "\n",
+    "    print(f\"Required sample size per group {np.ceil(n)}\")\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0d70e290",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Required sample size per group 314.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "calculate_sample_size(0.05, 0.8, 1, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4b85d63",
    "metadata": {},
    "outputs": [],
    "source": []
